server/packages/sandbox-agent/tests/sessions/snapshots/sessions__sessions__session_lifecycle__run_http_events_snapshot@http_events_mock.snap
---
source: server/packages/sandbox-agent/tests/sessions/../common/http.rs
expression: normalized
---
- metadata: true
  seq: 1
  session: started
  type: session.started
- item:
    content_types:
      - text
    kind: message
    role: user
    status: in_progress
  seq: 2
  type: item.started
- delta:
    delta: "<redacted>"
    item_id: "<redacted>"
    native_item_id: "<redacted>"
  seq: 3
  type: item.delta
- item:
    content_types:
      - text
    kind: message
    role: user
    status: completed
  seq: 4
  type: item.completed
- item:
    content_types:
      - text
    kind: message
    role: assistant
    status: in_progress
  seq: 5
  type: item.started
- delta:
    delta: "<redacted>"
    item_id: "<redacted>"
    native_item_id: "<redacted>"
  seq: 6
  type: item.delta
- item:
    content_types:
      - text
    kind: message
    role: assistant
    status: completed
  seq: 7
  type: item.completed
